Fix: Solve visibility issue for hidden form modal                                                          - Replaced display: none with visibility control for thr hidden form modal.                                                 - Added Javascript logic to toggle visibility when 'Add book' button is clicked.                                            - Ensured form hides correctly when 'Cancel' or 'Add Book' (on form) is clicked.

--- a/main.css
+++ b/main.css
@@ -227,9 +227,6 @@ button[type="submit"]:active {
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
 }
 /*hidden entry form*/
-.modal-hidden {
-    display: none;
-}
 .hidden-form-entry {
     display: flex;
     justify-content: center;
@@ -241,6 +238,13 @@ button[type="submit"]:active {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.3s, opacity 0.3s ease-in-out;
+}
+.hidden-form-entry.visible {
+    visibility: visible;
+    opacity: 1;
 }
 #addBookModal {
     background: rgba(0, 0, 0, 0.63);
